fini model, exceptions, connection a la db, security, validation, commencer les controllers et repo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=projetWeb
+spring.datasource.url=jdbc:h2:mem:projetWeb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=app
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=none
+spring.h2.console.enabled=true
+
+#debug=true
+#trace=true
+#spring.output.ansi.enabled=ALWAYS
+
+spring.security.user.name=projet
+spring.security.user.password=projet
