--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=projetWeb
 spring.datasource.url=jdbc:h2:mem:projetWeb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=app
+spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
@@ -9,6 +9,16 @@ spring.h2.console.enabled=true
 #debug=true
 #trace=true
 #spring.output.ansi.enabled=ALWAYS
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+#spring.security.user.name=projet
+#spring.security.user.password=projet
+#spring.sql.init.mode=always
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-spring.security.user.name=projet
-spring.security.user.password=projet
+
+
+#pour se connecter a h2: http://localhost:8080/h2-console
+
+#pour postman: http://localhost:8080/
