--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=projetWeb
 spring.datasource.url=jdbc:h2:mem:projetWeb
 spring.datasource.driverClassName=org.h2.Driver
+spring.h2.console.settings.web-allow-others=true
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=none
