--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
-
+tomtom.api.key=D40caB3RsJ5A6iryX4jB212WAi2Uc73w
 
 #pour se connecter a h2: http://localhost:8080/h2-console
 
